# computor_v1

./: .gitignore  CMakeLists.txt  ErrorManager.cpp  ErrorManager.h  ParserArgv.cpp  ParserArgv.h  README.md  main  main.cpp  tools.cpp  tools.h
ErrorManager/: ErrorManager.cpp  ErrorManager.h  IErrorManager.h
src/: CMakeLists.txt  main.cpp
src/Computor/: Computor.h  Computor_v1.cpp  Computor_v1.h
src/Computor_v1/: Computor_v1.cpp  Computor_v1.h
src/Computor_v1/unit_tests/: CMakeLists.txt  build.sh  main.cpp
src/ErrorHandler/: ErrorHandler.cpp  ErrorHandler.h
src/ErrorManager/: ErrorManager.cpp  ErrorManager.h  IErrorManager.h
src/Expression/: Creator.h  ExpressionTree.h  IExpressionNode.h  Node.h  NodeFactory.h  NumberNode.h  OperatorNode.h  PolynomialExpressionTree.h  UnknownNode.h  UnknownNumberNode.h
src/Expression/unit_tests/: CMakeLists.txt  build.sh  main.cpp
src/tools/: tools.cpp  tools.h
unit_tests/: CMakeLists.txt  TestComputor_v1WithFixture.cpp  TestErrorHandlerWithFixture.cpp  main.cpp
